[gd_scene load_steps=5 format=3 uid="uid://brno11ahpmpe8"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hqidi"]
[ext_resource type="Texture2D" uid="uid://bf5syqpecpg0o" path="res://icon.svg" id="1_jmswg"]
[ext_resource type="FontFile" uid="uid://d0scthstgfocq" path="res://assets/fonts/Kenney Mini Square.ttf" id="3_140il"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ikwn"]
bg_color = Color(1, 1, 1, 0.392157)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hqidi")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 144.0
offset_bottom = 143.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_jmswg")

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -88.0
offset_right = 90.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ikwn")

[node name="LogoutButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -42.0
offset_right = 30.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_140il")
theme_override_font_sizes/font_size = 14
text = "LOGOUT"

[node name="CloseSettingsButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_bottom = 28.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_140il")
text = "X"

[node name="LogoutRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsPanel/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="SettingsPanel/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
[connection signal="request_completed" from="LogoutRequest" to="." method="_on_logout_request_request_completed"]
